--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=root"
+    },
+    "Jwt": {
+        "Key": "EstaEsUnaClaveSuperSegura03031998!!",
+        "Issuer": "InventarioAPI"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
