--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=root"
+        "DefaultConnection": "Host=localhost;Port=5432;Database=inventariodb;Username=postgres;Password=root"
     },
     "Jwt": {
         "Key": "EstaEsUnaClaveSuperSegura03031998!!",
